Fix alumni list spacing

--- a/css/main.scss
+++ b/css/main.scss
@@ -263,17 +263,15 @@ p.byline {
   font-size: 16px;
   font-weight: 500;
   color: #111827;
-  line-height: 1.6;
-  display: block;
+  line-height: 1.4;
 }
 
 .alumni2 {
   font-size: 13px;
   font-weight: 400;
   color: #6b7280;
-  line-height: 1.5;
+  line-height: 1.4;
   padding-left: 20px;
-  display: inline;
 }
 
 /* --- Publications --------------------------------------- */
